--- a/dashboard.html
+++ b/dashboard.html
@@ -2,260 +2,332 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Dashboard | Finance Point</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
+
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+  />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap"
+    rel="stylesheet"
+  />
+
   <style>
+    /* Root colors and fonts */
+    :root {
+      --bg-color: #121822;
+      --highlight: #ffd700;
+      --text-light: #eee;
+      --text-muted: #bbb;
+      --card-bg: rgba(255 215 0 / 0.1);
+      --card-bg-hover: rgba(255 215 0 / 0.25);
+    }
+
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      font-family: 'Poppins', sans-serif;
+      font-family: "Poppins", sans-serif;
     }
-    body {
-      min-height: 100vh;
-      color: #fff;
-      background-color: #121212; /* dark background */
+
+    body,
+    html {
+      height: 100%;
+      background-color: var(--bg-color);
+      color: var(--text-light);
+      overflow-x: hidden;
       position: relative;
-      transition: background-color 0.3s, color 0.3s;
     }
 
-    body.light-mode {
-      color: #121212;
-      background-color: #f0f0f0; /* light background */
+    /* Particle canvas full screen behind */
+    #particles-canvas {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      z-index: 0;
+      pointer-events: none;
+      background: #121822;
     }
 
-    .overlay {
-      display: none; /* removed overlay since no bg image */
-    }
-
+    /* Sidebar styling */
     .sidebar {
       position: fixed;
       top: 0;
       left: 0;
       height: 100vh;
-      width: 220px;
-      background: rgba(0, 0, 0, 0.85);
-      padding: 20px 10px;
-      z-index: 5;
+      width: 230px;
+      background-color: rgba(18, 24, 34, 0.95);
+      box-shadow: 2px 0 8px rgba(0, 0, 0, 0.7);
+      padding: 25px 15px;
+      z-index: 10;
       overflow-y: auto;
-      transition: background 0.3s, color 0.3s;
     }
-    body.light-mode .sidebar {
-      background: rgba(240, 240, 240, 0.95);
-    }
+
     .sidebar h2 {
-      color: #ffd700;
-      font-size: 22px;
+      color: var(--highlight);
+      font-size: 26px;
       text-align: center;
-      margin-bottom: 30px;
-      transition: color 0.3s;
-    }
-    body.light-mode .sidebar h2 {
-      color: #b8860b;
+      margin-bottom: 40px;
+      font-weight: 700;
+      letter-spacing: 1.2px;
     }
 
     .sidebar a {
       display: flex;
       align-items: center;
-      gap: 10px;
-      color: #ccc;
+      gap: 12px;
+      color: var(--text-muted);
       text-decoration: none;
-      padding: 12px 20px;
-      margin: 8px 0;
-      border-radius: 5px;
-      transition: background 0.3s, color 0.3s;
-    }
-    body.light-mode .sidebar a {
-      color: #333;
-    }
-    .sidebar a:hover, .sidebar a.active {
-      background: #ffd700;
-      color: #000;
-      font-weight: bold;
+      padding: 13px 18px;
+      margin-bottom: 14px;
+      border-radius: 8px;
+      font-weight: 500;
+      font-size: 16px;
+      transition: background-color 0.3s, color 0.3s;
     }
 
+    .sidebar a.active,
+    .sidebar a:hover {
+      background-color: var(--highlight);
+      color: #121822;
+      font-weight: 700;
+    }
+
+    .sidebar a i {
+      font-size: 18px;
+      width: 22px;
+      text-align: center;
+    }
+
+    /* Main content */
     .main {
-      margin-left: 220px;
-      padding: 2rem;
+      margin-left: 230px;
+      padding: 2.5rem 3rem;
       z-index: 5;
-      transition: color 0.3s;
-    }
-    body.light-mode .main {
-      color: #121212;
-    }
-
-    .header {
-      background: rgba(255,255,255,0.08);
-      padding: 20px;
-      border-radius: 10px;
-      margin-bottom: 20px;
-      transition: background 0.3s;
-    }
-    body.light-mode .header {
-      background: rgba(0,0,0,0.05);
+      position: relative;
+      min-height: 100vh;
     }
 
     .header h1 {
-      font-size: 24px;
-      color: #ffd700;
-      transition: color 0.3s;
-    }
-    body.light-mode .header h1 {
-      color: #b8860b;
+      font-size: 28px;
+      color: var(--highlight);
+      margin-bottom: 2rem;
+      font-weight: 700;
+      letter-spacing: 0.8px;
     }
 
+    /* Search box */
+    .search-container {
+      margin-bottom: 25px;
+      max-width: 450px;
+    }
+
+    .search-container input[type="text"] {
+      width: 100%;
+      padding: 12px 18px;
+      border-radius: 30px;
+      border: none;
+      font-size: 16px;
+      font-weight: 500;
+      outline: none;
+      background-color: rgba(255 255 255 / 0.1);
+      color: var(--text-light);
+      transition: background-color 0.3s;
+    }
+
+    .search-container input[type="text"]::placeholder {
+      color: var(--text-muted);
+    }
+
+    .search-container input[type="text"]:focus {
+      background-color: var(--card-bg-hover);
+      box-shadow: 0 0 8px var(--highlight);
+    }
+
+    /* Quick nav grid */
     .quick-nav {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
-      gap: 1rem;
-      margin: 20px 0;
+      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+      gap: 18px;
+      margin-bottom: 35px;
     }
 
     .quick-nav a {
-      background: rgba(255,255,255,0.08);
-      padding: 1.2rem;
-      border-radius: 12px;
-      text-align: center;
-      color: #fff;
-      text-decoration: none;
-      font-weight: 500;
-      transition: background 0.3s, color 0.3s;
-    }
-    body.light-mode .quick-nav a {
-      background: rgba(0,0,0,0.05);
-      color: #121212;
-    }
-    .quick-nav a:hover {
-      background: #ffd700;
-      color: #000;
-    }
-
-    .facts, .notifications {
-      background: rgba(255,255,255,0.08);
-      padding: 20px;
-      border-radius: 10px;
-      margin-bottom: 1.5rem;
-      transition: background 0.3s, color 0.3s;
-    }
-    body.light-mode .facts, body.light-mode .notifications {
-      background: rgba(0,0,0,0.05);
-      color: #121212;
-    }
-
-    .facts h2, .notifications h2 {
-      color: #ffd700;
-      margin-bottom: 10px;
-      transition: color 0.3s;
-    }
-    body.light-mode .facts h2, body.light-mode .notifications h2 {
-      color: #b8860b;
-    }
-
-    .facts ul, .notifications ul {
-      list-style: disc;
-      padding-left: 20px;
-    }
-
-    .toggle-mode {
-      position: fixed;
-      top: 12px;
-      right: 12px;
-      z-index: 20;
-      background: rgba(255, 215, 0, 0.9);
-      color: #000;
-      width: 40px;
-      height: 40px;
-      border-radius: 50%;
       display: flex;
+      flex-direction: column;
       align-items: center;
       justify-content: center;
-      font-size: 18px;
-      cursor: pointer;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.3);
-      transition: background 0.3s;
-    }
-    .toggle-mode:hover {
-      background: #ffd700;
+      padding: 18px 0;
+      border-radius: 15px;
+      background-color: var(--card-bg);
+      text-decoration: none;
+      color: var(--text-light);
+      font-weight: 600;
+      font-size: 15px;
+      transition: background-color 0.3s, color 0.3s;
+      box-shadow: 0 0 6px rgba(255, 215, 0, 0.1);
     }
 
-    @media (max-width: 768px) {
+    .quick-nav a i {
+      font-size: 30px;
+      margin-bottom: 8px;
+      color: var(--highlight);
+      transition: color 0.3s;
+    }
+
+    .quick-nav a:hover {
+      background-color: var(--highlight);
+      color: #121822;
+    }
+
+    .quick-nav a:hover i {
+      color: #121822;
+    }
+
+    /* Facts and academic tips cards */
+    .facts,
+    .notifications {
+      background-color: var(--card-bg);
+      padding: 24px 28px;
+      border-radius: 14px;
+      box-shadow: 0 0 10px rgba(255, 215, 0, 0.15);
+      margin-bottom: 25px;
+    }
+
+    .facts h2,
+    .notifications h2 {
+      color: var(--highlight);
+      margin-bottom: 15px;
+      font-weight: 700;
+      font-size: 20px;
+      letter-spacing: 0.5px;
+    }
+
+    .facts ul,
+    .notifications ul {
+      list-style: disc inside;
+      color: var(--text-light);
+      font-weight: 500;
+      font-size: 15px;
+      line-height: 1.5;
+      max-width: 700px;
+      user-select: none;
+    }
+
+    /* Responsive */
+    @media (max-width: 900px) {
       .sidebar {
+        width: 60px;
+        padding: 25px 5px;
+      }
+      .sidebar h2 {
         display: none;
       }
+      .sidebar a {
+        justify-content: center;
+        padding: 14px 0;
+        margin-bottom: 10px;
+        font-size: 0;
+        border-radius: 10px;
+      }
+      .sidebar a i {
+        font-size: 22px;
+        color: var(--text-muted);
+      }
+      .sidebar a.active,
+      .sidebar a:hover {
+        color: var(--highlight);
+        background-color: transparent;
+      }
+
       .main {
-        margin-left: 0;
-        padding: 1rem;
+        margin-left: 60px;
+        padding: 2rem 1.5rem;
+      }
+
+      .quick-nav {
+        grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+        gap: 14px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .main {
+        padding: 1.5rem 1rem;
       }
     }
   </style>
 </head>
 <body>
-  <div class="toggle-mode" id="modeToggle" title="Toggle Light/Dark Mode">
-    <i class="fas fa-moon"></i>
-  </div>
+  <!-- Particle background canvas -->
+  <canvas id="particles-canvas"></canvas>
 
-  <div class="sidebar">
+  <!-- Sidebar -->
+  <nav class="sidebar">
     <h2>Finance Point</h2>
-    <a href="dashboard.html" class="active"><i class="fas fa-home"></i> Dashboard</a>
-    <a href="downloads.html"><i class="fas fa-file-download"></i> Downloads</a>
-    <a href="events.html"><i class="fas fa-calendar"></i> Events</a>
-    <a href="news.html"><i class="fas fa-bullhorn"></i> News</a>
-    <a href="executives.html"><i class="fas fa-users"></i> Executives</a>
-    <a href="lostandfound.html"><i class="fas fa-search"></i> Lost & Found</a>
-    <a href="birthday.html"><i class="fas fa-birthday-cake"></i> Birthday Wall</a>
-    <a href="study.html"><i class="fas fa-book"></i> Study Resources</a>
-    <a href="contact.html"><i class="fas fa-phone"></i> Contact</a>
-  </div>
+    <a href="dashboard.html" class="active" title="Dashboard"><i class="fas fa-home"></i></a>
+    <a href="downloads.html" title="Downloads"><i class="fas fa-file-download"></i></a>
+    <a href="events.html" title="Events"><i class="fas fa-calendar"></i></a>
+    <a href="news.html" title="News"><i class="fas fa-bullhorn"></i></a>
+    <a href="executives.html" title="Executives"><i class="fas fa-users"></i></a>
+    <a href="lostandfound.html" title="Lost & Found"><i class="fas fa-search"></i></a>
+    <a href="birthday.html" title="Birthday Wall"><i class="fas fa-birthday-cake"></i></a>
+    <a href="study.html" title="Study Resources"><i class="fas fa-book"></i></a>
+    <a href="contact.html" title="Contact"><i class="fas fa-phone"></i></a>
+  </nav>
 
-  <div class="main">
-    <div class="header">
+  <!-- Main content -->
+  <main class="main">
+    <header class="header">
       <h1>👋 Welcome to the Finance Point Dashboard</h1>
+    </header>
+
+    <!-- Search bar -->
+    <div class="search-container">
+      <input
+        type="text"
+        id="searchInput"
+        placeholder="Search quick links..."
+        aria-label="Search quick links"
+      />
     </div>
 
-    <div class="quick-nav">
-      <a href="downloads.html"><i class="fas fa-file-download fa-2x"></i><br>Downloads</a>
-      <a href="events.html"><i class="fas fa-calendar fa-2x"></i><br>Events</a>
-      <a href="news.html"><i class="fas fa-bullhorn fa-2x"></i><br>News</a>
-      <a href="executives.html"><i class="fas fa-users fa-2x"></i><br>Executives</a>
-      <a href="lostandfound.html"><i class="fas fa-search fa-2x"></i><br>Lost & Found</a>
-      <a href="birthday.html"><i class="fas fa-birthday-cake fa-2x"></i><br>Birthday Wall</a>
-      <a href="study.html"><i class="fas fa-book fa-2x"></i><br>Study Resources</a>
+    <!-- Quick navigation cards -->
+    <div class="quick-nav" id="quickNav">
+      <a href="downloads.html"><i class="fas fa-file-download"></i> Downloads</a>
+      <a href="events.html"><i class="fas fa-calendar"></i> Events</a>
+      <a href="news.html"><i class="fas fa-bullhorn"></i> News</a>
+      <a href="executives.html"><i class="fas fa-users"></i> Executives</a>
+      <a href="lostandfound.html"><i class="fas fa-search"></i> Lost & Found</a>
+      <a href="birthday.html"><i class="fas fa-birthday-cake"></i> Birthday Wall</a>
+      <a href="study.html"><i class="fas fa-book"></i> Study Resources</a>
     </div>
 
-    <div class="facts">
+    <!-- Finance facts -->
+    <section class="facts">
       <h2>💡 Finance Facts</h2>
       <ul>
         <li>CBN regulates Nigeria’s monetary policy using tools like MPR, CRR, and liquidity ratio.</li>
         <li>First Bank Nigeria was established in 1894 as the Bank of British West Africa.</li>
         <li>Capital budgeting helps determine the viability of long-term financial investments.</li>
       </ul>
-    </div>
+    </section>
 
-    <div class="notifications">
+    <!-- Academic tips -->
+    <section class="notifications">
       <h2>📚 Academic Tips</h2>
       <ul>
         <li>Always revise your lecture notes within 24 hours to improve retention.</li>
         <li>Use color-coded flashcards for definitions and concepts.</li>
         <li>Join a study group to discuss and simplify tough topics like finance law.</li>
       </ul>
-    </div>
-  </div>
+    </section>
+  </main>
 
   <script>
-    const toggleBtn = document.getElementById('modeToggle');
-    toggleBtn.addEventListener('click', () => {
-      document.body.classList.toggle('light-mode');
-      const icon = toggleBtn.querySelector('i');
-      if(document.body.classList.contains('light-mode')) {
-        icon.classList.remove('fa-moon');
-        icon.classList.add('fa-sun');
-      } else {
-        icon.classList.remove('fa-sun');
-        icon.classList.add('fa-moon');
-      }
-    });
-  </script>
-</body>
-</html>
+    // Particle animation code
+    const canvas =
