--- a/login.html
+++ b/login.html
@@ -1,172 +1,175 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sign In</title>
+  <link href="https://fonts.googleapis.com/css2?family=Segoe+UI:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Segoe+UI:wght@400;600&display=swap" rel="stylesheet" />
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
     body {
       font-family: 'Segoe UI', sans-serif;
-      background: radial-gradient(circle at top left, #1a1a2e, #000);
-      color: white;
+      background: #0d0d0d;
+      color: #fff;
+      min-height: 100vh;
       display: flex;
-      justify-content: center;
       align-items: center;
-      height: 100vh;
+      justify-content: center;
+      position: relative;
       overflow: hidden;
     }
-    .container {
-      background: #111;
-      border: 1px solid gold;
-      padding: 40px;
-      border-radius: 12px;
+    .form-container {
+      background: rgba(17, 17, 17, 0.9);
+      padding: 40px 30px;
+      border-radius: 10px;
       width: 100%;
       max-width: 400px;
-      box-shadow: 0 0 20px gold;
+      border: 1px solid gold;
+      z-index: 2;
     }
     h2 {
-      color: gold;
-      margin-bottom: 25px;
       text-align: center;
+      margin-bottom: 20px;
+      color: gold;
     }
     input {
       width: 100%;
       padding: 12px;
-      margin: 10px 0;
-      border: none;
-      border-radius: 6px;
-      background: #222;
-      color: white;
+      margin-bottom: 15px;
+      border-radius: 5px;
+      border: 1px solid gold;
+      background: #1a1a1a;
+      color: #fff;
     }
     button {
       width: 100%;
       padding: 12px;
       background: gold;
-      color: black;
       border: none;
-      border-radius: 6px;
+      border-radius: 5px;
       font-weight: bold;
       cursor: pointer;
-      margin-top: 15px;
+      color: #000;
     }
     button:hover {
-      background: #ffcc00;
+      background: #ffd700;
     }
-    .link {
-      margin-top: 15px;
+    .message {
       text-align: center;
+      margin-top: 15px;
       font-size: 14px;
+      color: #f00;
     }
-    .link a {
-      color: gold;
-      text-decoration: none;
-    }
-    .toast {
+    .popup {
       position: fixed;
       top: 20px;
       left: 50%;
       transform: translateX(-50%);
-      background: #222;
+      background: #333;
       color: white;
-      padding: 12px 20px;
-      border-radius: 8px;
-      box-shadow: 0 0 10px #000;
+      padding: 12px 25px;
+      border-radius: 6px;
+      z-index: 9999;
       display: none;
-      z-index: 999;
     }
-    .toast.success { border-left: 5px solid limegreen; }
-    .toast.error { border-left: 5px solid crimson; }
+    .forgot {
+      text-align: right;
+      font-size: 14px;
+      margin-bottom: 15px;
+    }
+    .forgot a {
+      color: gold;
+      text-decoration: none;
+    }
+    .switch {
+      text-align: center;
+      margin-top: 20px;
+      font-size: 14px;
+    }
+    .switch a {
+      color: gold;
+      text-decoration: none;
+    }
+    .bg-animated {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 1;
+      background: url('https://www.transparenttextures.com/patterns/stardust.png') repeat;
+      opacity: 0.08;
+    }
   </style>
 </head>
 <body>
-  <div class="container">
+  <div class="bg-animated"></div>
+  <div class="form-container">
     <h2>Sign In</h2>
-    <input type="email" id="email" placeholder="Email address" />
+    <input type="email" id="email" placeholder="Email" />
     <input type="password" id="password" placeholder="Password" />
+    <div class="forgot"><a href="#" onclick="resetPassword()">Forgot Password?</a></div>
     <button onclick="login()">Sign In</button>
-    <div class="link">
-      <a href="#" onclick="forgotPassword()">Forgot Password?</a> |
-      <a href="signup.html">Create Account</a>
-    </div>
+    <div class="switch">Don't have an account? <a href="signup.html">Sign Up</a></div>
+    <div id="message" class="message"></div>
   </div>
-
-  <div class="toast" id="toast"></div>
-
-  <!-- Firebase SDK -->
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-auth-compat.js"></script>
-  <script>
+  <div class="popup" id="popup"></div>  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-auth-compat.js"></script>  <script>
     const firebaseConfig = {
       apiKey: "AIzaSyCH5H1FWEcHmQiCQhoc6GE8GhizqhTZoQc",
       authDomain: "finsa-connect.firebaseapp.com",
       projectId: "finsa-connect",
-      storageBucket: "finsa-connect.firebaseapp.com",
+      storageBucket: "finsa-connect.firebasestorage.app",
       messagingSenderId: "126845965255",
       appId: "1:126845965255:web:c82539297a8464873d7fe2"
     };
     firebase.initializeApp(firebaseConfig);
     const auth = firebase.auth();
 
-    function showToast(message, type) {
-      const toast = document.getElementById("toast");
-      toast.textContent = message;
-      toast.className = `toast ${type}`;
-      toast.style.display = "block";
+    function login() {
+      const email = document.getElementById('email').value.trim();
+      const password = document.getElementById('password').value.trim();
+      auth.signInWithEmailAndPassword(email, password)
+        .then(() => {
+          showPopup("Login successful! Redirecting...");
+          setTimeout(() => {
+            window.location.href = "dashboard.html";
+          }, 2000);
+        })
+        .catch(error => {
+          document.getElementById("message").textContent = getFriendlyErrorMessage(error.code);
+        });
+    }
+
+    function resetPassword() {
+      const email = document.getElementById('email').value.trim();
+      if (!email) {
+        showPopup("Enter your email first.");
+        return;
+      }
+      auth.sendPasswordResetEmail(email)
+        .then(() => showPopup("Reset link sent!"))
+        .catch(error => showPopup(getFriendlyErrorMessage(error.code)));
+    }
+
+    function showPopup(text) {
+      const popup = document.getElementById("popup");
+      popup.textContent = text;
+      popup.style.display = "block";
       setTimeout(() => {
-        toast.style.display = "none";
+        popup.style.display = "none";
       }, 4000);
     }
 
     function getFriendlyErrorMessage(code) {
       switch (code) {
         case "auth/user-not-found": return "Email not found.";
-        case "auth/wrong-password": return "Incorrect password.";
+        case "auth/wrong-password":
+        case "auth/internal-error": return "Incorrect password.";
         case "auth/invalid-email": return "Invalid email address.";
         case "auth/network-request-failed": return "No internet connection.";
         case "auth/too-many-requests": return "Too many attempts. Try again later.";
         default: return "An error occurred. Try again.";
       }
     }
-
-    function login() {
-      const email = document.getElementById("email").value.trim();
-      const password = document.getElementById("password").value;
-
-      if (!email || !password) {
-        showToast("Please enter both email and password.", "error");
-        return;
-      }
-
-      auth.signInWithEmailAndPassword(email, password)
-        .then(() => {
-          showToast("Login successful!", "success");
-          setTimeout(() => {
-            window.location.href = "dashboard.html";
-          }, 3000);
-        })
-        .catch(error => {
-          const msg = getFriendlyErrorMessage(error.code);
-          showToast(msg, "error");
-        });
-    }
-
-    function forgotPassword() {
-      const email = document.getElementById("email").value.trim();
-      if (!email) {
-        showToast("Enter your email first.", "error");
-        return;
-      }
-
-      auth.sendPasswordResetEmail(email)
-        .then(() => showToast("Reset link sent to your email.", "success"))
-        .catch(error => {
-          const msg = getFriendlyErrorMessage(error.code);
-          showToast(msg, "error");
-        });
-    }
-  </script>
-</body>
+  </script></body>
 </html>
