--- a/me.html
+++ b/me.html
@@ -1,15 +1,17 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Profile</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <meta charset="UTF-8" />
+  <title>My Profile - Finance Point</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
       background: #000 url('https://cdn.jsdelivr.net/gh/Julian-Nash/assets@main/tech-background.gif') center/cover no-repeat;
       color: gold;
       margin: 0;
+      padding: 0;
     }
     header {
       background-color: rgba(20, 20, 20, 0.95);
@@ -23,114 +25,184 @@
       z-index: 1000;
     }
     h1 {
-      font-size: 1.8rem;
-    }
-    .container {
-      padding: 20px;
-      max-width: 800px;
-      margin: auto;
-    }
-    .profile-box {
-      background: rgba(20, 20, 20, 0.85);
-      padding: 20px;
-      border-radius: 10px;
-      margin-bottom: 20px;
-      box-shadow: 0 0 10px gold;
-    }
-    .profile-box h2 {
-      font-size: 1.4rem;
-      margin-bottom: 10px;
-    }
-    .profile-info {
-      margin-bottom: 10px;
-    }
-    .profile-info strong {
-      display: inline-block;
-      width: 150px;
-    }
-    .logout-btn {
-      background: gold;
-      color: black;
-      padding: 10px 16px;
-      border: none;
-      border-radius: 6px;
-      font-weight: bold;
-      cursor: pointer;
-      float: right;
+      font-size: 1.5rem;
     }
     .nav-container {
+      display: flex;
+      justify-content: center;
+      gap: 10px;
+      flex-wrap: wrap;
       background: #111;
       padding: 10px;
-      display: flex;
-      justify-content: space-around;
       border-bottom: 2px solid gold;
-      box-shadow: 0 2px 4px rgba(255, 215, 0, 0.2);
     }
     .nav-container a {
       color: gold;
       text-decoration: none;
-      font-weight: bold;
-      padding: 8px 12px;
-      border-radius: 5px;
+      padding: 8px 16px;
+      border-radius: 6px;
+      background: #222;
       transition: 0.3s;
+      font-weight: bold;
     }
     .nav-container a.active {
       background: gold;
       color: black;
       pointer-events: none;
     }
+
+    .container {
+      max-width: 500px;
+      margin: 30px auto;
+      background: rgba(20, 20, 20, 0.95);
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px gold;
+      text-align: center;
+    }
+
+    .profile-img {
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 2px solid gold;
+      margin-bottom: 15px;
+    }
+
+    .info-box {
+      margin-bottom: 15px;
+      padding: 10px;
+      border: 1px dashed gold;
+      border-radius: 6px;
+      background: rgba(0,0,0,0.4);
+    }
+
+    .info-box strong {
+      display: block;
+      font-size: 1.1rem;
+      margin-bottom: 5px;
+    }
+
+    .btn-settings {
+      display: inline-block;
+      margin: 10px;
+      padding: 8px 14px;
+      background: gold;
+      color: black;
+      font-weight: bold;
+      border-radius: 5px;
+      text-decoration: none;
+    }
+
+    .logout-btn {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background: crimson;
+      color: white;
+      border: none;
+      padding: 10px 16px;
+      border-radius: 6px;
+      cursor: pointer;
+      font-weight: bold;
+    }
+
+    .leaderboard-box {
+      margin-top: 20px;
+      background: rgba(255, 255, 255, 0.05);
+      border: 1px solid gold;
+      border-radius: 6px;
+      padding: 10px;
+    }
   </style>
 </head>
-<body><header>
-  <h1>FINANCE POINT</h1>
-</header><!-- Top Nav Bar --><div class="nav-container">
-  <a href="home.html">Home</a>
-  <a href="announcement-events.html">Announcements</a>
-  <a href="downloads.html">Downloads</a>
-  <a href="cbt.html">CBT</a>
-  <a href="leaderboard.html">Leaderboard</a>
-  <a href="feedback.html">Feedback</a>
-  <a href="lostfound.html">Lost & Found</a>
-  <a href="me.html" class="active">Me</a>
-</div><div class="container">
-  <div class="profile-box">
-    <h2>Your Profile</h2>
-    <div class="profile-info"><strong>Full Name:</strong> <span id="fullName">Loading...</span></div>
-    <div class="profile-info"><strong>Matric Number:</strong> <span id="matricNumber">Loading...</span></div>
-    <div class="profile-info"><strong>Email:</strong> <span id="email">Loading...</span></div>
-    <button class="logout-btn" onclick="logoutUser()">Logout</button>
+<body>
+  <header>
+    <h1>FINANCE POINT</h1>
+  </header>
+
+  <div class="nav-container">
+    <a href="home.html">Home</a>
+    <a href="announcement-events.html">Announcements</a>
+    <a href="downloads.html">Downloads</a>
+    <a href="cbt.html">CBT</a>
+    <a href="leaderboard.html">Leaderboard</a>
+    <a href="feedback.html">Feedback</a>
+    <a href="lostfound.html">Lost & Found</a>
+    <a href="me.html" class="active">Me</a>
   </div>
-</div><script type="module">
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
-  import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
-  import { getFirestore, doc, getDoc } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
 
-  const firebaseConfig = {
-    apiKey: "AIzaSyCH5H1FWEcHmQiCQhoc6GE8GhizqhTZoQc",
-    authDomain: "finsa-connect.firebaseapp.com",
-    projectId: "finsa-connect",
-    storageBucket: "finsa-connect.appspot.com",
-    messagingSenderId: "126845965255",
-    appId: "1:126845965255:web:c82539297a8464873d7fe2"
-  };
+  <div class="container">
+    <img id="profilePic" class="profile-img" src="https://i.imgur.com/nq3Z1Yz.png" alt="Profile" />
+    <div class="info-box">
+      <strong id="fullName">Full Name</strong>
+      <span id="matricNum">Matric Number</span>
+    </div>
+    <div class="info-box">
+      <strong>Email</strong>
+      <span id="emailText">user@example.com</span>
+    </div>
+    <a href="settings.html" class="btn-settings"><i class="fas fa-cog"></i> Edit Profile</a>
 
-  const app = initializeApp(firebaseConfig);
-  const auth = getAuth(app);
-  const db = getFirestore(app);
+    <div class="leaderboard-box" id="leaderboardInfo">
+      🏆 You are currently in the Top 10! Keep it up!
+    </div>
+  </div>
 
-  onAuthStateChanged(auth, async (user) => {
-    if (!user) return window.location.href = "login.html";
-    const docSnap = await getDoc(doc(db, "users", user.uid));
-    if (docSnap.exists()) {
-      const data = docSnap.data();
-      document.getElementById("fullName").textContent = data.fullName || "N/A";
-      document.getElementById("matricNumber").textContent = data.matricNumber || "N/A";
-      document.getElementById("email").textContent = user.email || "N/A";
-    }
-  });
+  <button class="logout-btn" onclick="logoutUser()">
+    <i class="fas fa-sign-out-alt"></i> Logout
+  </button>
 
-  window.logoutUser = function () {
-    signOut(auth).then(() => window.location.href = "login.html?status=logout");
-  }
-</script></body>
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
+    import { getAuth, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
+    import { getFirestore, doc, getDoc, collection, query, orderBy, limit, getDocs } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
+
+    const firebaseConfig = {
+      apiKey: "AIzaSyCH5H1FWEcHmQiCQhoc6GE8GhizqhTZoQc",
+      authDomain: "finsa-connect.firebaseapp.com",
+      projectId: "finsa-connect",
+      storageBucket: "finsa-connect.appspot.com",
+      messagingSenderId: "126845965255",
+      appId: "1:126845965255:web:c82539297a8464873d7fe2"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
+    const db = getFirestore(app);
+
+    const fullNameEl = document.getElementById("fullName");
+    const matricNumEl = document.getElementById("matricNum");
+    const emailEl = document.getElementById("emailText");
+    const profilePic = document.getElementById("profilePic");
+    const leaderboardInfo = document.getElementById("leaderboardInfo");
+
+    onAuthStateChanged(auth, async (user) => {
+      if (!user) return window.location.href = "login.html";
+
+      const userDoc = await getDoc(doc(db, "users", user.uid));
+      if (userDoc.exists()) {
+        const data = userDoc.data();
+        fullNameEl.textContent = data.fullName || "User";
+        matricNumEl.textContent = data.matricNumber || "Not Available";
+        emailEl.textContent = user.email || "No Email";
+        profilePic.src = data.photoURL || "https://i.imgur.com/nq3Z1Yz.png";
+      }
+
+      // Fetch leaderboard position (mock logic)
+      const scoresRef = collection(db, "cbt_scores");
+      const q = query(scoresRef, orderBy("score", "desc"), limit(10));
+      const topScores = await getDocs(q);
+      const topUserIds = topScores.docs.map(doc => doc.data().userId);
+      if (!topUserIds.includes(user.uid)) {
+        leaderboardInfo.innerHTML = "📉 You are not in the Top 10 yet. Keep practicing!";
+      }
+    });
+
+    window.logoutUser = function () {
+      signOut(auth).then(() => window.location.href = "login.html");
+    };
+  </script>
+</body>
 </html>
